--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -3,10 +3,11 @@
       <div class="card card-body text-center">
         <h1><i class="fab fa-node-js fa-3x"></i></h1>
         <p>Create an account or login</p>
-        <a href="/users/register" class="btn btn-primary btn-block mb-2"
-          >Register</a
-        >
+        <a href="/users/register" class="btn btn-primary btn-block mb-2">Register</a>
         <a href="/users/login" class="btn btn-secondary btn-block">Login</a>
+        <a href="/members" class="btn btn-secondary btn-block">Members route</a>
+<a href="/users/logout" class="btn btn-secondary">Logout</a>
+
       </div>
     </div>
   </div>
